Break the app on purpose

--- a/src/index.html
+++ b/src/index.html
@@ -85,7 +85,8 @@
         </div>
         <button type="submit" class="button">Enviar</button>
         <div id="privacy">
-          <a href="privacy.html" target="_blank">Política de Privacidade</a>
+          <a href="privacy.html">Política de Privacidade</a>
+          <!-- <a href="privacy.html" target="_blank">Política de Privacidade</a> -->
         </div>
       </form>
     </div>
